OSP: Added Beta Support for OSP-Hub (hub.openstreamingplatform.com)
OSP-Core: Improvement and Fixes to Video Clipping !388
OSP-Core: Updated RTMP Ingest Labels !386
OSP-Core: Truncates Video Comments > 2048 Characters
OSP-Core: Fixes to Chat Popout Window
OSP-Core: Fixes for HTML returns on Deleted Users
OSP-Core: Adds User Notification on Video Processing Start and Completion

0.9.9
==============================================
OSP-Core: Fixes for Channel Level Webhooks Not Displaying
OSP-Core: Optimizations on Channel Level Webhooks
OSP-Core: Fixes to the /user endpoint which causes 500 error on pulling users with channels
OSP-Core: Added Ability for Admins to Transfer a Channel to Another User
OSP-Core: Adds Ability for Admins to Force Reset a User Password
OSP-Core: Optimized /video API routes on all videos and individual video
OSP-Core: Optmized Updating of Channel Chat Settings
OSP-Core: Fixes a bug where video comments > 2048 characters would cause a 500 error
OSP-Core/Ejabberd: Removed the requirement for configuring external Ejabberd access.  OSP will now act as a reverse proxy to Ejabberd's BOSH connection

0.9.8
==============================================
OSP-Core: Adds Subscription Count to Channel API
OSP-Core: Adds Lazy Load to Channel and Admin Settings Stickers, Chat Sticker Picker
OSP-Core: Optimizes page load for My Channels Settings Page
OSP-Core: Fixes Bug in Channels Search API
OSP-Core: Optimization of the List User API Call
OSP-Core: Various Bug Fixes related to calls to non-existant values

0.9.7
==============================================
OSP-Core/OSP-RTMP: Adds WebRTC playback via OvenMediaEngine RTMP Push (*Experimental*). Read more at https://open-streaming-platform.readthedocs.io/en/nightly/usage/streaming.html#osp-web-rtc-playback-experimental
OSP-Core: Adds Server M3U8 for all active streams -> /m3u8/stream/index.m3u8
OSP-Core: Adds Server M3U8 for all videos -> /m3u8/video/index.m3u8